--- a/2 first-react-app/public/index.html
+++ b/2 first-react-app/public/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>this is my h1 tag</h1>
+    prifile be something linke that is gonna be the goto them all time
   </body>
 </html>
